--- a/Talksy-API/.gitignore
+++ b/Talksy-API/.gitignore
@@ -31,5 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
-
+src/main/resources/keys/local-only/private_key.pem
+src/main/resources/keys/local-only/public_key.pem
 .env
