Added the custom exceptions for more code debugging clarity

--- a/Talksy-API/src/main/resources/application-properties.yml
+++ b/Talksy-API/src/main/resources/application-properties.yml
@@ -22,8 +22,11 @@ app:
     jwt:
       access-token-expiration: 86400000 # 24 hours
       refresh-token-expiration: 604800000 # 7 days
+      invitation-expiration: 900000 # 30 mins
     disposable-email: 10 Minute Mail, Temp Mail, Guerrilla Mail, Mailinator, Proton Mail (Temp), YOPmail, Dispostable, EmailOnDeck, Burner Mail, Temp-Mail.org, Internxt Temp Mail, AdGuard Temp Mail, 33 Mail, Spamgourmet, Mohmal
-    mail:
-      from-email: souhailamouri123@gmail.com
-      frontend:
-        activation-url: http://localhost:4200/activate-account
+  mail:
+    from-email: souhailamouri123@gmail.com
+    frontend:
+      activation-url: http://localhost:4200/activate-account
+
+
