--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: postgres-sql-tsy
     image: postgres
     environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: TsyDb$SHA2562001
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
       PGDATA: /var/lib/postgresql/data
       POSTGRES_DB: talksy
     volumes:
