--- a/Talksy-API/.gitignore
+++ b/Talksy-API/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 src/main/resources/keys/local-only/private_key.pem
 src/main/resources/keys/local-only/public_key.pem
-.env
+.env.properties
