--- a/Talksy-API/src/main/resources/application.yml
+++ b/Talksy-API/src/main/resources/application.yml
@@ -1,14 +1,16 @@
 spring:
   application:
     name: Talksy-API
+  config:
+    import: optional:classpath:.env.properties
   datasource:
-    url: jdbc:postgresql://localhost:5432/talksy
+    url: jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_NAME}
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
