--- a/talksy-ui/package.json
+++ b/talksy-ui/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "api-gen": "ng-openapi-gen -i ./src/openapi/openapi.json -o ./src/app/services"
   },
   "private": true,
   "dependencies": {
