Fixed height issues in the login and registration pages

--- a/Talksy-API/src/main/resources/application.yml
+++ b/Talksy-API/src/main/resources/application.yml
@@ -28,6 +28,8 @@ spring:
           auth: true
           starttls:
             enable: true
+  cors:
+    origins: http://localhost:4200,http://localhost:8080
   servlet:
     multipart:
       max-file-size: 50MB
