--- a/talksy-ui/package.json
+++ b/talksy-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ctrl/ngx-emoji-mart": "^9.3.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.8",
